[gd_scene load_steps=6 format=3 uid="uid://b0c8lgxhmstmc"]

[ext_resource type="Script" uid="uid://p1r7i8jgrqfb" path="res://scenes/UI/server_browser.gd" id="1_0gaf3"]
[ext_resource type="Script" uid="uid://538wriobukg2" path="res://scenes/UI/server_container.gd" id="1_fayu8"]
[ext_resource type="Script" uid="uid://b1caevvijnd0k" path="res://scenes/UI/server_browser_handler.gd" id="2_0gaf3"]
[ext_resource type="Theme" uid="uid://cyr8w7bxof0cp" path="res://Themes/default.tres" id="3_86pot"]
[ext_resource type="PackedScene" uid="uid://ddr4dtg2htl0l" path="res://scenes/UI/password.tscn" id="4_p6opn"]

[node name="ServerBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0gaf3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.243137, 0.282353, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="UIHeader" type="PanelContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorRect/VBoxContainer/UIHeader"]
show_behind_parent = true
layout_mode = 2
color = Color(0.077316, 0.122229, 0.145841, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/UIHeader"]
layout_mode = 2
theme = ExtResource("3_86pot")
theme_type_variation = &"ServerBrowser"

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/UIHeader/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_86pot")
theme_type_variation = &"HeaderLarge"
text = "Server Browser"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="ServerBrowserHeader" type="ColorRect" parent="ColorRect/VBoxContainer/PanelContainer"]
layout_mode = 2
color = Color(0.427968, 0.554281, 0.623944, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_86pot")
theme_type_variation = &"ServerBrowser"
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Server Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Player Count:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_86pot")
theme_type_variation = &"CustomPanelContainers"

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 2

[node name="ServerContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer/PanelContainer3/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_86pot")
theme_type_variation = &"CustomVBoxes"
script = ExtResource("1_fayu8")

[node name="PanelContainer2" type="PanelContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorRect/VBoxContainer/PanelContainer2"]
layout_mode = 2
color = Color(0.168627, 0.243137, 0.282353, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_86pot")
theme_type_variation = &"ServerBrowser"

[node name="Back" type="Button" parent="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer/MarginContainer3"]
layout_mode = 2
theme = ExtResource("3_86pot")
theme_type_variation = &"CustomButtons"
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("3_86pot")
theme_type_variation = &"ServerBrowser"

[node name="Username" type="LineEdit" parent="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_86pot")
theme_type_variation = &"CustomLineEdits"
placeholder_text = "Enter username..."

[node name="ServerListUpdateInterval" type="Timer" parent="ColorRect"]
unique_name_in_owner = true
wait_time = 3.0

[node name="ServerBrowserHandler" type="HTTPRequest" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0gaf3")

[node name="Password" parent="." instance=ExtResource("4_p6opn")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer/MarginContainer3/Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="ColorRect/VBoxContainer/PanelContainer2/HBoxContainer/MarginContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="timeout" from="ColorRect/ServerListUpdateInterval" to="ColorRect/VBoxContainer/PanelContainer3/ScrollContainer/ServerContainer" method="_on_server_list_update_interval_timeout"]
